--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,8 @@
 
 </head>
 <body>
+
+
 {% block header %}
 <!-- HEADER -->
 <header>
@@ -191,9 +193,8 @@
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">All Categories</a></li>
-                    <li><a href="#">Accessories</a></li>
-                    <li class="active">Headphones (227,490 Results)</li>
+                    <li><a href="#">{% block emplacement %}{% endblock %}</a></li>
+
                 </ul>
             </div>
         </div>
@@ -543,6 +544,7 @@
     <script src="{{ asset('styles/js/main.js') }}"></script>
 {% block javascripts %}
 {% endblock %}
+
 
 
 </body>
