--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,7 +8,7 @@
 
    <div class="container my-4">
        <div class="row justify-content-center">
-           <div class="col-md-8 col-lg-6">
+           <div class="col-md-8 mt-2 col-lg-6">
                <div class="card shadow">
                    <div class="card-header  text-white">
                        <h3 class="mb-0">Create an Account</h3>
