--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -43,7 +43,7 @@
                 <div class="product-img">
                     <img src="{{ asset('styles/' ~ produit.getImage()) }}" alt="{{ produit.name }}" class="img-fluid">
                 <div class="product-label">
-                        <span class="sale">-30%</span>
+                        <span class="sale">-{{ random(5,30) }}%</span>
                         <span class="new">NEW</span>
                     </div>
                 </div>
@@ -65,7 +65,9 @@
                     </div>
                 </div>
                 <div class="add-to-cart">
-                    <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                    <button class="add-to-cart-btn" onclick="window.location.href='{{ app.user ? '/CartItem/' ~ produit.id : '/register' }}'">
+                        <i class="fa fa-shopping-cart"></i> add to cart
+                    </button>
                 </div>
             </div>
         </div>
