--- a/templates/cart_item/index.html.twig
+++ b/templates/cart_item/index.html.twig
@@ -33,7 +33,7 @@
                                    min="1" max="{{ produit.stock }}" value="1" required>
                         </div>
 
-                        <button type="submit" class="primary-btn">Add to Cart</button>
+                       <button type="submit" class="primary-btn" onclick="window.location.href='{{ path('app_cart') }}'; return true;">Add to Cart</button>
                     </form>
                 </div>
             </div>
