--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,10 +3,10 @@
 {% block title %}Register{% endblock %}
 {% block emplacement %} Inscription {% endblock %}
 
-{% block store %}
-    <h1>Register</h1>
+{% block body %}
 
-   <div class="container my-4">
+   <div class="container my-4 pt-4">
+        <h1>Register</h1>
        <div class="row justify-content-center">
            <div class="col-md-8 mt-2 col-lg-6">
                <div class="card shadow">
