--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,6 +5,13 @@
 
 {% block body %}
 
+    {% if errors %}
+        <div class="alert alert-danger">
+            {{ errors|join('<br>') }}
+        </div>
+    {% endif %}
+
+
    <div class="container my-4 pt-4">
         <h1>Register</h1>
        <div class="row justify-content-center">
