--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,11 +88,12 @@
                     <div class="header-ctn">
                         <!-- Wishlist -->
                         <div>
-                            <a href="#">
+
+                            <a href="/wishList">
                                 <i class="fa fa-heart-o"></i>
                                 <span>Your Wishlist</span>
-                                <div class="qty">2</div>
                             </a>
+
                         </div>
                         <!-- /Wishlist -->
 
