--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
                 <!-- LOGO -->
                 <div class="col-md-3">
                     <div class="header-logo">
-                        <a href="#" class="logo">
+                        <a href="/index" class="logo">
                             <img src="{{ asset('styles/img/logo.png') }}" alt="">
                         </a>
                     </div>
