cart item has only one product

--- a/templates/cart_item/update.html.twig
+++ b/templates/cart_item/update.html.twig
@@ -6,7 +6,7 @@
 <div class="section">
     <div class="container">
         <div class="row">
-            {% set produit = cartItem.produits.first %}
+            {% set produit = cartItem.produit %}
 
             <div class="col-md-4">
                 <div class="product-image-container">
