Separating header and footer

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% set showHeader = false%}
+{% set showFooter = false%}
+
 {% block title %}Register{% endblock %}
 {% block emplacement %} Inscription {% endblock %}
 
