--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}Hello UtilisateurController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,12 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>C:/SymfonyFolders/FinalProject/src/Controller/IndexController.php</code></li>
-        <li>Your template at <code>C:/SymfonyFolders/FinalProject/templates/index/index.html.twig</code></li>
+        <li>Your controller at <code>C:/Users/medam/PhpstormProjects/E-commerceProject/src/Controller/UtilisateurController.php</code></li>
+        <li>Your template at <code>C:/Users/medam/PhpstormProjects/E-commerceProject/templates/utilisateur/index.html.twig</code></li>
     </ul>
 </div>
-{% endblock %}
-
-{% block store %}
-
 {% endblock %}
