--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,9 +43,8 @@
         <div id="responsive-nav">
             <!-- NAV -->
             <ul class="main-nav nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="/index">Categories</a></li>
-                <li><a href="/index/ordinateur">Laptops</a></li>
+                <li class="active"><a href="/index">Home</a></li>
+                <li><a href="/index/laptops">Laptops</a></li>
                 <li><a href="/index/smartphone">Smartphones</a></li>
                 <li><a href="/index/camera">Cameras</a></li>
                 <li><a href="/index/accessoire">Accessories</a></li>
@@ -66,8 +65,8 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">{% block emplacement %}{% endblock %}</a></li>
+                    <li><a href="/index">Home</a></li>
+                    <li>{% block emplacement %}{% endblock %}</li>
 
                 </ul>
             </div>
