--- a/templates/fragments/footer.html.twig
+++ b/templates/fragments/footer.html.twig
@@ -1,5 +1,3 @@
-
-
 <!-- FOOTER -->
 <footer id="footer">
     <!-- top footer -->
@@ -7,57 +5,42 @@
         <!-- container -->
         <div class="container">
             <!-- row -->
-            <div class="row">
-                <div class="col-md-3 col-xs-6">
-                    <div class="footer">
-                        <h3 class="footer-title">About Us</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                        <ul class="footer-links">
-                            <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                            <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                            <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
-                        </ul>
+            <div class="row d-flex justify-content-center text-center">
+                <div class="d-flex flex-wrap justify-content-center">
+                    <div class="col-md-3 col-xs-12">
+                        <div class="footer">
+                            <h3 class="footer-title">About Us</h3>
+                            <p>At echriPC, we bring you the latest and greatest in tech—computers, accessories, and gadgets—all in one place. Our mission is to make high-quality technology accessible, affordable, and just a click away.</p>
+                            <ul class="footer-links">
+                                <li><a href="#"><i class="fa fa-map-marker"></i>INSAT - Tunis</a></li>
+                                <li><a href="#"><i class="fa fa-phone"></i>85 555</a></li>
+                                <li><a href="#"><i class="fa fa-envelope-o"></i>echrPC@gmail.com</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
-                <div class="col-md-3 col-xs-6">
-                    <div class="footer">
-                        <h3 class="footer-title">Categories</h3>
-                        <ul class="footer-links">
-                            <li><a href="#">Hot deals</a></li>
-                            <li><a href="#">Laptops</a></li>
-                            <li><a href="#">Smartphones</a></li>
-                            <li><a href="#">Cameras</a></li>
-                            <li><a href="#">Accessories</a></li>
-                        </ul>
+                    <div class="col-md-3 col-xs-12">
+                        <div class="footer">
+                            <h3 class="footer-title">Categories</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Hot deals</a></li>
+                                <li><a href="/index/laptops">Laptops</a></li>
+                                <li><a href="/index/smartphone">Smartphones</a></li>
+                                <li><a href="/index/camera">Cameras</a></li>
+                                <li><a href="/index/accessoires">Accessories</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
-                <div class="clearfix visible-xs"></div>
-
-                <div class="col-md-3 col-xs-6">
-                    <div class="footer">
-                        <h3 class="footer-title">Information</h3>
-                        <ul class="footer-links">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Orders and Returns</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-xs-6">
-                    <div class="footer">
-                        <h3 class="footer-title">Service</h3>
-                        <ul class="footer-links">
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">View Cart</a></li>
-                            <li><a href="#">Wishlist</a></li>
-                            <li><a href="#">Track My Order</a></li>
-                            <li><a href="#">Help</a></li>
-                        </ul>
+                    <div class="col-md-3 col-xs-12">
+                        <div class="footer">
+                            <h3 class="footer-title">Service</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">My Account</a></li>
+                                <li><a href="#">View Cart</a></li>
+                                <li><a href="#">Wishlist</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -74,18 +57,18 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <ul class="footer-payments">
-                        <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-                        <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
+                        <li><i class="fa fa-cc-visa"></i></li>
+                        <li><i class="fa fa-credit-card"></i></li>
+                        <li><i class="fa fa-cc-paypal"></i></li>
+                        <li><i class="fa fa-cc-mastercard"></i></li>
+                        <li><i class="fa fa-cc-discover"></i></li>
+                        <li><i class="fa fa-cc-amex"></i></li>
                     </ul>
                     <span class="copyright">
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							</span>
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with 
+                        <i class="fa fa-heart-o" aria-hidden="true"></i> by 
+                        <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                    </span>
                 </div>
             </div>
             <!-- /row -->
