Added UserList for admin

--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -52,7 +52,7 @@
                 </div>
                 <!-- /SEARCH BAR -->
 
-                <!-- ACCOUNT -->
+  {#              <!-- ACCOUNT -->
                 <div class="col-md-3 clearfix">
                     <div class="header-ctn">
                         <!-- Wishlist -->
@@ -120,14 +120,12 @@
                         <!-- /Menu Toogle -->
                     </div>
                 </div>
-                <!-- /ACCOUNT -->
+                <!-- /ACCOUNT -->#}
             </div>
             <!-- row -->
         </div>
         <!-- container -->
     </div>
     <!-- /MAIN HEADER -->
-
-
 </header>
 <!-- /HEADER -->
