--- a/templates/fragments/footer.html.twig
+++ b/templates/fragments/footer.html.twig
@@ -5,7 +5,7 @@
         <!-- container -->
         <div class="container">
             <!-- row -->
-            <div class="row d-flex justify-content-center text-center">
+            <div class="row d-flex justify-content-center ">
                 <div class="d-flex flex-wrap justify-content-center">
                     <div class="col-md-3 col-xs-12">
                         <div class="footer">
