--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -40,15 +40,9 @@
                 <div class="col-md-6">
                     <div class="header-search">
                         <form>
-                            <label>
-                                <select class="input-select">
-                                    <option value="0">All Categories</option>
-                                    <option value="1">Category 01</option>
-                                    <option value="1">Category 02</option>
-                                </select>
-                            </label>
 
-                            <input class="input" placeholder="Search here">
+
+                           <input class="input" placeholder="Search here" style="border-radius: 20px 0 0 20px;">
 
                             <button class="search-btn">Search</button>
                         </form>
