--- a/templates/fragments/header.html.twig
+++ b/templates/fragments/header.html.twig
@@ -44,7 +44,7 @@
 
                            <input class="input" placeholder="Search here" style="border-radius: 20px 0 0 20px;">
 
-                            <button class="search-btn">Search</button>
+                            <button class="search-btn" type="button" onclick="redirectToSearch()">Search</button>
                         </form>
                     </div>
                 </div>
@@ -119,3 +119,4 @@
     <!-- /MAIN HEADER -->
 </header>
 <!-- /HEADER -->
+
