--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -17,7 +17,6 @@
                 Show:
                 <select class="input-select" id="products-per-page">
                     <option value="2" {% if limit == 2 %}selected{% endif %}>2</option>
-
                     <option value="10" {% if limit == 10 %}selected{% endif %}>10</option>
                     <option value="20" {% if limit == 20 or limit is not defined %}selected{% endif %}>20</option>
                     <option value="50" {% if limit == 50 %}selected{% endif %}>50</option>
@@ -26,8 +25,8 @@
             </label>
         </div>
         <ul class="store-grid">
-            <li class="active"><a href="{{ path('app_index', {'page': 1, 'limit': limit}) }}"><i class="fa fa-th"></i></a></li>
-            <li><a href="#"><i class="fa fa-th-list"></i></a></li>
+            <li class="active" id="grid-view"><i class="fa fa-th"></i></li>
+            <li id="list-view"><i class="fa fa-th-list"></i></li>
         </ul>
     </div>
     <!-- /store top filter -->
@@ -51,6 +50,11 @@
                         <span class="new">NEW</span>
                     </div>
                 </div>
+                <div class="add-to-cart">
+                    <button class="add-to-cart-btn" onclick="window.location.href='{{ app.user ? '/CartItem/' ~ produit.id : '/register' }}'">
+                        <i class="fa fa-shopping-cart"></i> add to cart
+                    </button>
+                </div>
                 <div class="product-body">
                     <p class="product-category">{{ produit.categorie.getName() }}</p>
                     <h3 class="product-name"><a href="#">{{ produit.name }}</a></h3>
@@ -64,12 +68,12 @@
                     </div>
                     <div class="product-btns">
 
-                            <button class="add-to-wishlist">
-                                <a href="{{ path('app_Wishlist_add_item', {'id': produit.id}) }}">
-                                    <i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
+                        <button class="add-to-wishlist">
+                            <a href="{{ path('app_Wishlist_add_item', {'id': produit.id}) }}">
+                                <i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
 
-                                </a>
-                            </button>
+                            </a>
+                        </button>
 
                         <button class="quick-view">
                             <a href="{{ path('produit_details', {'id': produit.id}) }}">
@@ -78,11 +82,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="add-to-cart">
-                    <button class="add-to-cart-btn" onclick="window.location.href='{{ app.user ? '/CartItem/' ~ produit.id : '/register' }}'">
-                        <i class="fa fa-shopping-cart"></i> add to cart
-                    </button>
-                </div>
+
             </div>
         </div>
         <!-- /product -->
@@ -131,4 +131,20 @@
 </script>
 
 
+
+<script>
+    document.getElementById('grid-view').addEventListener('click', function() {
+        document.getElementById('store').classList.remove('list-view');
+        document.getElementById('store').classList.add('grid-view');
+        this.classList.add('active');
+        document.getElementById('list-view').classList.remove('active');
+    });
+
+    document.getElementById('list-view').addEventListener('click', function() {
+        document.getElementById('store').classList.remove('grid-view');
+        document.getElementById('store').classList.add('list-view');
+        this.classList.add('active');
+        document.getElementById('grid-view').classList.remove('active');
+    });
+</script>
 {% endblock %}
