avoir des produits reccomendés dynamiques

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -57,7 +57,7 @@
                 </div>
                 <div class="product-body">
                     <p class="product-category">{{ produit.categorie.getName() }}</p>
-                    <h3 class="product-name"><a href="#">{{ produit.name }}</a></h3>
+                    <h3 class="product-name">{{ produit.name }}</h3>
                     <h4 class="product-price">$ {{ produit.price}} <del class="product-old-price">${{ produit.price * 1.2|round(2)}}</del></h4>
                     <div class="product-rating">
                         <i class="fa fa-star"></i>
