--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -160,39 +160,20 @@
 
                 <!-- aside Widget -->
                 <div class="aside">
-                    <h3 class="aside-title">Top selling</h3>
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="{{ asset('styles/img/product01.png') }}" alt="">
+                    <h3 class="aside-title">Check Our Products</h3>
+                    {% for product in ThreeProducts %}
+                        <div class="product-widget">
+                            <div class="product-img">
+                                <img src="{{ asset('styles/' ~ product.getImage()) }}" alt="{{ product.name }}">
+                            </div>
+                            <div class="product-body">
+                                <p class="product-category">{{ product.categorie.name }}</p>
+                                <h3 class="product-name"><a href="{{ path('produit_details', {'id': product.id}) }}">{{ product.name }}</a></h3>
+                                <h4 class="product-price">${{ product.price }} <del class="product-old-price">${{ product.price * 1.2|round(2) }}</del></h4>
+                            </div>
                         </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
+                    {% endfor %}
 
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="{{ asset('styles/img/product02.png') }}" alt="">
-                        </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
-
-                    <div class="product-widget">
-                        <div class="product-img">
-                            <img src="{{ asset('styles/img/product01.png') }}" alt="">
-                        </div>
-                        <div class="product-body">
-                            <p class="product-category">Category</p>
-                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        </div>
-                    </div>
                 </div>
                 <!-- /aside Widget -->
             </div>
