Fixing cart.js location

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -128,5 +128,5 @@
     </div>
 </div>
 
-<script src="{{ asset('styles/js/cart.js') }}"></script>
+<script src="{{ asset('js/cart.js') }}"></script>
 {% endblock %}
