Created Admin space

--- a/templates/admin_fragments/header.html.twig
+++ b/templates/admin_fragments/header.html.twig
@@ -25,14 +25,16 @@
                 <!-- LOGO -->
                 <div class="col-md-3">
                     <div class="header-logo">
-                        <a href="/index" class="logo">
+                        <a href="{{ url('admin.home') }}" class="logo">
                             <img src="{{ asset('styles/img/logo.png') }}" alt="">
+                            <h3>Admin Space</h3>
                         </a>
                     </div>
                 </div>
+
                 <!-- /LOGO -->
 
-                <!-- SEARCH BAR -->
+                {#<!-- SEARCH BAR -->
                 <div class="col-md-6">
                     <div class="header-search">
                         <form>
@@ -50,7 +52,7 @@
                         </form>
                     </div>
                 </div>
-                <!-- /SEARCH BAR -->
+                <!-- /SEARCH BAR -->#}
 
   {#              <!-- ACCOUNT -->
                 <div class="col-md-3 clearfix">
